Added drone.io config

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{_('Hidden places')}}</title>
+    <link rel="shortcut icon" type="image/jpg" href="{{url_for('static', filename='favicon.ico')}}"/>
 
     <style>
         html, body{
@@ -42,5 +43,6 @@
         {% block footer %}
         {% endblock %}
     </footer>
+
 </body>
 </html>
