--- a/app/templates/message/new.html
+++ b/app/templates/message/new.html
@@ -6,7 +6,7 @@
     <h2 class="card-header">{{ _('New message') }}</h2>
     <div class="card-body">
         <form method="POST" action="" role="form" method="POST">
-            {{ form.csrf_token }}
+            {{ form.hidden_tag() }}
 
             <div class="form-group">
                 {{ render_label(form.to, 'person') }}
