--- a/app/templates/user/password.html
+++ b/app/templates/user/password.html
@@ -9,7 +9,7 @@
         </h4>
         <div class="card-body">
             <form method="POST" action="" role="form">
-                {{ form.csrf_token }}
+                {{ form.hidden_tag() }}
 
                 {{ render_field(form.old_password, class="mb-3", placeholder=form.old_password.label.text) }}
                 {{ render_field(form.password, placeholder=form.password.label.text) }}
