--- a/app/templates/location/_visits.html
+++ b/app/templates/location/_visits.html
@@ -6,7 +6,7 @@
     <div class="list-group list-group-flush">
         <div class="list-group-item">
             <form class="form" method="POST" action="" role="form">
-                {{ form.csrf_token }}
+                {{ form.hidden_tag() }}
                 {{ form.comment(placeholder=_('How was your visit?'), class_="form-control") }}
                 <div class="d-flex justify-content-between mt-2">
                     <div class="row">
