--- a/app/templates/location/document.html
+++ b/app/templates/location/document.html
@@ -9,7 +9,7 @@
     </h4>
     <div class="card-body">
         <form method="POST" action="" role="form" class="row">
-            {{ form.csrf_token }}
+            {{ form.hidden_tag() }}
 
             <div class="form-group">
                 {{ render_label(form.name, 'pencil') }}
