--- a/app/templates/user/ban.html
+++ b/app/templates/user/ban.html
@@ -8,7 +8,7 @@
     </h4>
     <div class="card-body">
         <form method="POST" action="" role="form">
-            {{ form.csrf_token }}
+            {{ form.hidden_tag() }}
 
             <div class="form-group">
                 {{ render_label(form.reason, 'pencil') }}
