--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -1,26 +1,26 @@
+{% set title=_('Edit')+" "+user.first_name+" "+user.last_name %}
 {% extends '_private.html' %}
+{% from "_helpers.html" import render_field, link_button %}
 
 {% block content %}
 <div class="card">
     <h4 class="card-header">
-        {{ _('Edit profile of') }} {{ current_user.first_name }} {{ current_user.last_name }}
+        {{ _('Edit profile of') }} {{ user.first_name }} {{ user.last_name }}
     </h4>
     <div class="card-body">
         <form method="POST" action="" role="form">
             {{ form.hidden_tag() }}
-            <div class="mb-2">
-                {{ _('Supports markdown formatting, check the ') }}<a href="https://www.markdownguide.org/basic-syntax/">{{ _('syntax') }}</a>
-            </div>
-
-            {{ form.about(class_="form-control", style="min-height: 20em", placeholder=_('Write something about yourself')) }}
+            {% set description = _('Supports markdown formatting, check the <a href="https://www.markdownguide.org/basic-syntax/">syntax</a>') %}
+            {{ render_field(form.about, style="min-height: 20em", placeholder=_('Write something about yourself'), description=description) }}
             <div class="row mt-2">
                 {{ form.photo.label(class_="col-form-label col-auto") }}
                 <div class="col-auto">
                     {{ form.photo(class="form-control") }}
                 </div>
             </div>
+
             <div class="mt-2 text-end">
-                <a href="{{ url_for('user.profile') }}" class="btn btn-danger">{{ _('Cancel') }}</a>
+                {{ link_button(_('Cancel'), url_for('user.profile'), color='danger') }}
                 {{ form.submit(class="btn btn-success") }}
             </div>
         </form>
