--- a/app/templates/user/invite.html
+++ b/app/templates/user/invite.html
@@ -1,5 +1,6 @@
+{% set title=_('Invite new user') %}
 {% extends '_private.html' %}
-{% from '_helpers.html' import render_label %}
+{% from '_helpers.html' import render_field %}
 
 {% block content %}
 <div class="card">
@@ -9,19 +10,9 @@
     <div class="card-body">
         <form method="POST" action="" role="form">
             {{ form.hidden_tag() }}
-
-            <div class="form-group">
-                {{ render_label(form.name, 'person') }}
-                {{ form.name(class_="form-control", placeholder=_('Real name of the person invited')) }}
-            </div>
-            <div class="form-group">
-                {{ render_label(form.email, 'envelope') }}
-                {{ form.email(class_="form-control", placeholder='name@example.com') }}
-            </div>
-            <div class="form-group">
-                {{ render_label(form.reason, 'pencil') }}
-                {{ form.reason(class_="form-control", placeholder=_('Why are you inviting this guy?')) }}
-            </div>
+            {{ render_field(form.name, 'person', placeholder=_('Real name of the person invited')) }}
+            {{ render_field(form.email, 'envelope', placeholder='name@example.com') }}
+            {{ render_field(form.reason, 'pencil', placeholder=_('Why are you inviting this guy?')) }}
             <div class="mt-2 text-end">
                 {{ form.submit(class="btn btn-success") }}
             </div>
