--- a/app/templates/user/password.html
+++ b/app/templates/user/password.html
@@ -1,5 +1,6 @@
+{% set title=_('Change password') %}
 {% extends '_private.html' %}
-{% from "_helpers.html" import render_floating_field as render_field, render_submit %}
+{% from "_helpers.html" import render_floating_field %}
 
 {% block content %}
 <div class="d-flex justify-content-center">
@@ -11,10 +12,10 @@
             <form method="POST" action="" role="form">
                 {{ form.hidden_tag() }}
 
-                {{ render_field(form.old_password, class="mb-3", placeholder=form.old_password.label.text) }}
-                {{ render_field(form.password, placeholder=form.password.label.text) }}
-                {{ render_field(form.confirm, placeholder=form.confirm.label.text) }}
-                {{ render_submit(form.submit, class="mt-3 w-100 btn-lg") }}
+                {{ render_floating_field(form.old_password, class="mb-3", placeholder=form.old_password.label.text) }}
+                {{ render_floating_field(form.password, placeholder=form.password.label.text) }}
+                {{ render_floating_field(form.confirm, placeholder=form.confirm.label.text) }}
+                {{ form.submit(class_="btn btn-primary mt-3 w-100 btn-lg") }}
             </form>
         </div>
     </div>
