Added link to github to login page

--- a/app/templates/_public.html
+++ b/app/templates/_public.html
@@ -6,7 +6,7 @@
         {% endblock %}
     </div>
     <footer class="text-center fixed-bottom">
-        <p class="mt-5 mb-3 text-muted">&copy; Jakub Kaderka 2021</p>
+        <p class="mt-5 mb-3 text-muted">&copy; <a href="https://github.com/kajusK/">Jakub Kaderka</a> 2021</p>
     </footer>
 </div>
 {% endblock %}
