--- a/app/templates/admin/logins.html
+++ b/app/templates/admin/logins.html
@@ -1,17 +1,18 @@
+{% set title=_("Logins log") %}
 {% extends '_private.html' %}
 {% from '_helpers.html' import render_pagination, card_count, link_button %}
 
 {% block content %}
 <div class="row">
-    {{ card_count(_('Failed'), 0, 'shield', 'text-danger') }}
-    {{ card_count(_('Unique IPs'), 0, 'share', 'text-success') }}
-    {{ card_count(_('Today'), 0, 'clock', 'text-success') }}
-    {{ card_count(_('Monthly'), 0, 'calendar', 'text-success') }}
+    {{ card_count(_('Failed'), failed, 'shield', 'text-danger') }}
+    {{ card_count(_('Unique IPs'), unique, 'share', 'text-success') }}
+    {{ card_count(_('Day'), per_day, 'clock', 'text-success') }}
+    {{ card_count(_('Month'), per_month, 'calendar', 'text-success') }}
 </div>
 
 <div class="card">
     <div class="card-header">
-        <h3>{{ _('Logins') }}</h3>
+        <h3>{{ title }}</h3>
     </div>
     <div class="card-body pb-0">
         <table class="table">
@@ -28,34 +29,35 @@
             </thead>
             <tbody class="align-middle">
                 {% for login in logins %}
-                <tr class="table-success">
-                    <td>21-2-2021 17:52:15</td>
-                    <td>192.168.1.1</td>
-                    <td>Czechia</td>
-                    <td>Linux</td>
-                    <td>Firefox 1.2.3</td>
-                    <td><a href="#">mee@too.com</a></td>
-                    <td>Success</td>
+                {% if login.result.name == 'SUCCESS' %}
+                    {% set state = _('Success') %}
+                    <tr class="table-success">
+                {% elif login.result.name == 'BANNED' %}
+                    {% set state = _('Banned') %}
+                    <tr class="table-secondary">
+                {% elif login.result.name == 'INVALID_EMAIL' %}
+                    {% set state = _('Invalid email') %}
+                    <tr class="table-danger">
+                {% elif login.result.name == 'INVALID_PASSWORD' %}
+                    {% set state = _('Invalid password') %}
+                    <tr class="table-warning">
+                {% else %}
+                    {% set state = _('Not active') %}
+                    <tr class="table-secondary">
+                {% endif %}
+                    <td>{{ login.timestamp }}</td>
+                    <td>{{ login.ip }} </td>
+                    <td>{{ login.country }}</td>
+                    <td>{{ login.system }}</td>
+                    <td>{{ login.browser }}</td>
+                    {% if login.user_id %}
+                    <td><a href="{{ url_for('user.profile', user_id=login.user_id) }}">{{ login.email }}</a></td>
+                    {% else %}
+                    <td>{{ login.email }}</td>
+                    {% endif %}
+                    <td>{{ state }}</td>
                 </tr>
                 {% endfor %}
-                <tr class="table-warning">
-                    <td>21-2-2021 19:21:11</td>
-                    <td>192.168.1.1</td>
-                    <td>Austria</td>
-                    <td>Windows</td>
-                    <td>Firefox 1.2.3</td>
-                    <td><a href="#">mee@too.com</a></td>
-                    <td>Invalid password</td>
-                </tr>
-                <tr class="table-danger">
-                    <td>21-2-2021 19:21:11</td>
-                    <td>192.168.1.1</td>
-                    <td>Austria</td>
-                    <td>Android</td>
-                    <td>Chrome 1.2.3</td>
-                    <td>invalid@email.com</td>
-                    <td>Invalid email</td>
-                </tr>
             </tbody>
         </table>
 
