--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -8,16 +8,11 @@
         {{ _('Edit profile of') }} {{ user.first_name }} {{ user.last_name }}
     </h4>
     <div class="card-body">
-        <form method="POST" action="" role="form">
+        <form method="POST" action="" role="form" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
             {% set description = _('Supports markdown formatting, check the <a href="https://www.markdownguide.org/basic-syntax/">syntax</a>') %}
             {{ render_field(form.about, style="min-height: 20em", placeholder=_('Write something about yourself'), description=description) }}
-            <div class="row mt-2">
-                {{ form.photo.label(class_="col-form-label col-auto") }}
-                <div class="col-auto">
-                    {{ form.photo(class="form-control") }}
-                </div>
-            </div>
+            {{ render_field(form.photo) }}
 
             <div class="mt-2 text-end">
                 {{ link_button(_('Cancel'), url_for('user.profile'), color='danger') }}
