--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -21,8 +21,12 @@
 <div class="row">
     <div class="col-md-3 mb-2">
         <div class="card">
+            {% set image_url = url_for('static', filename='images/person_placeholder.png') %}
+            {% if user.photo_path %}
+                {% set image_url = url_for('upload.get', path=user.photo_path) %}
+            {% endif %}
+            <img class="card-img-top" src="{{ image_url }}" alt="Profile photo">
             <div class="row card-body">
-                <img class="p-0 col-5 col-xl-12" src="{{ url_for('static', filename='images/person_placeholder.png') }}" alt="Profile photo">
                 <div class="col">
                     <h3 class="card-title">{{ user.first_name }} {{ user.last_name }}</h3>
                     {{ _('Created') }}: {{ user.created.date() }}<br>
@@ -48,7 +52,7 @@
     </div>
     <div class="col">
         <div class="card">
-            <div class="card-header text-end">
+            <div class="card-header">
                 {{ _('About') }}
             </div>
             <div class="card-body">
